# ultimhex

./: .gitignore  App.cpp  App.h  CMakeLists.txt  README.md  bloc_pad_tool.cpp  bloc_pad_tool.h  conf.geo  containers_std.h  context.h  flagged.geogram.json  geom_ultimaille_binding.cpp  geom_ultimaille_binding.h  gl_draw.h  gui_base.cpp  gui_base.h  helpers.cpp  helpers.h  layer_pad_tool.cpp  layer_pad_tool.h  main.cpp  mesh_metadata.cpp  mesh_metadata.h  my_tet_boundary.h  paint_flag_tool.cpp  polycubified.geogram.json  tag_face.cpp  tag_face.h  tool.h
ext/geogram/src/lib/geogram_gfx/GLUP/shaders/GLUP/: fragment_ray_tracing.h
ext/geogram/src/lib/geogram_gfx/GLUP/shaders/GLUPGLSL/: thick_lines_fragment_shader.h
ext/geogram/src/lib/geogram_gfx/gui/: simple_application.cpp  simple_application.h
ext/geogram/src/lib/geogram_gfx/mesh/: mesh_gfx.h
ext/nicostuff/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  helpme.txt
ext/nicostuff/algo/: CMakeLists.txt  basic.h  create_shape.cpp  create_shape.h  drop_attribute.cpp  drop_attribute.h  drop_glyph.cpp  drop_glyph.h  drop_mesh.h  dynamicKNN.h  geom2.cpp  geom2.h  geom3.cpp  geom3.h  glyphs.h  mesh_geom.cpp  mesh_geom.h  toolbox.h  toolbox_hexahedra.cpp  toolbox_hexahedra.h  toolbox_pointset.cpp  toolbox_pointset.h  toolbox_polyline.cpp  toolbox_polyline.h  toolbox_tetrahedra.cpp  toolbox_tetrahedra.h  toolbox_triangles.cpp  toolbox_triangles.h
ext/nicostuff/algo/dirty/: readonly_mesh_extract_3d.cpp  readonly_mesh_extract_3d.h
ext/nicostuff/algo/framework/: benjamin_API.cpp  benjamin_API.h  mesh_API.cpp  mesh_API.h  meta.h  nico_framework.h  param_parser.h  trace.cpp  trace.h
ext/nicostuff/algo/fullhex/: CADhex.cpp  CADhex.h  FF_to_seamless.cpp  FF_to_seamless.h  cube_cover.cpp  cube_cover.h  fiber.cpp  fiber.h  frame_field_3d.cpp  frame_field_3d.h  frame_field_3d_on_tri.cpp  frame_field_3d_on_tri.h  gp_basic.cpp  gp_basic.h  hextract.cpp  hextract.h  seamless_to_GP.cpp  seamless_to_GP.h  untangle_tetrahedra.cpp  untangle_tetrahedra.h
ext/nicostuff/algo/surface/: CAD_tools.cpp  CAD_tools.h  FF2d.cpp  FF2d.h  feature_curve_detector.cpp  feature_curve_detector.h  mesh_edit.cpp  mesh_edit.h  pointset_in_surface.cpp  pointset_in_surface.h
ext/nicostuff/algo/volume/: SDF.h  SH4.cpp  SH4.h  frame3D.cpp  frame3D.h  hex_cut.cpp  hex_cut.h  hex_edit.cpp  hex_edit.h  hex_select.h  hex_smooth.cpp  hex_smooth.h  hex_stat.cpp  hex_stat.h
ext/nicostuff/exe/polygraph/: F1polycube.lua  poly_cube.cpp  poly_flag.cpp  poly_hexedit.cpp  polycube.lua
tools/: bloc_pad_tool.cpp  bloc_pad_tool.h  camera_tool.cpp  camera_tool.h  embedit_tool.cpp  embedit_tool.h  facet_selector.cpp  facet_selector.h  filter_tool.cpp  filter_tool.h  hex_collapse_tool.cpp  hex_collapse_tool.h  hex_split_tool.cpp  hex_split_tool.h  hover_tool.cpp  hover_tool.h  layer_pad_tool copy.cpp.old  layer_pad_tool.cpp  layer_pad_tool.h  layer_pad_tool2.cpp  layer_selector.cpp  layer_selector.h  layer_stack_redefinition_tool.cpp  layer_stack_redefinition_tool.h  multi_tool_example.cpp  multi_tool_example.h  new_bloc_pad_tool.cpp  new_bloc_pad_tool.h  paint_flag_tool.cpp  paint_flag_tool.h  patch_pad_tool.cpp  patch_pad_tool.h  path_constraint_padding_tool copy.cpp.old  path_constraint_padding_tool.cpp  path_constraint_padding_tool.h  polycubify_tool.cpp  polycubify_tool.h  selection_compressor.h  smooth_tool.cpp  smooth_tool.h  (+1 more)
